src/index.css
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

html {
  height: 100%;
}

body {
  padding-top: 10rem;
  padding-left: 10rem;
  margin: 0;
  min-height: 100%;
  padding-bottom: 30px;
  position: relative;
  background-image: linear-gradient(to bottom, black 1%, transparent),
    url("../src/assets/images/bkg.jpg");
    /* "Background vector created by freepik - www.freepik.com" */
background-size: cover;
  background-attachment: fixed;
  background-color: black;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif; */
}

.container {
  color: white;
  margin-top: 10px;
  margin-bottom: 50px;
}

.jumbotron {
  border-radius: 30px;
  position: relative;
}

.card {
  border: 0;
  background-color: rgba(0, 0, 0, 0.5);
  filter: grayscale(100%);
}

.card:hover {
  filter: grayscale(0%);
}
.card:hover > img {
  filter: opacity(50%) blur(3px);
}

.card-img {
  filter: opacity(80%);
}

.card-img-overlay > h5,
.card-img-overlay > p {
  visibility: hidden;
}
.card-img-overlay:hover h5,
.card-img-overlay:hover p {
  visibility: visible;
}

.card-text,
.card-title,
.card-footer {
  text-shadow: 1px 1px black;
}

footer {
  clear: both;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

.adjustRight {
  /* width: calc(100% -10rem); */
  margin-left: 10rem;
  margin-right: 10px;
}
.rightHeader {
  position: absolute;
  top: 20px;
  right: -40px
}

.adjustLeft {
  /* width: calc(100% -10rem); */
  margin-right: 10rem;
  margin-left: 30px;
}
.leftHeader {
  position: absolute;
  top: 20px;
  left: -40px
}

.vertical-nav {
  position: fixed;
  top: 15%;
  width: 9rem;
  /* border-radius: 10px;
  border-style: dashed;
  border-color: aliceblue; */
}

table {
  color: rgba(255, 255, 255, 0.575) !important;
}

a {
  color: white !important;

}

.entrance {
  margin-top: 100px;
  font-size: 80px;
  padding: 10px;
  display: inline-block;
  overflow: hidden;
}

.navbar-nav{
  writing-mode: vertical-rl;
text-orientation: mixed;
}

.attribute{
  writing-mode: vertical-rl;
text-orientation: mixed;
  position: fixed;
  right:0;
  bottom:50%;
  font-size: xx-small;
  color: dimgray !important;
}

.neonText {
  color: #000;
  text-shadow: 
  0 0 6px rgba(202,228,225,0.92),
  0 0 30px rgba(202,228,225,0.34),
  0 0 12px rgba(30,132,242,0.52),
  0 0 21px rgba(30,132,242,0.92),
  0 0 34px rgba(30,132,242,0.78),
  0 0 54px rgba(30,132,242,0.92)
}

.resume {
 max-height: 500px
}

.resumeButton {
  position: absolute;
  top: 40px;
  right: 20px
}

